Footer acabado ( faltan todas las animaciones de enlaces, inicio de pagina etc )

--- a/src/index.html
+++ b/src/index.html
@@ -723,7 +723,7 @@
                 <div
                   class="ms-2 d-flex align-items-start d-inline-flex"
                   id="divFlecha">
-                  <i class="bi bi-arrow-right primeraFlechaAzul"></i
+                  <i class="bi bi-arrow-right pt-1 primeraFlechaAzul"></i
                   ><i
                     class="bi bi-arrow-right ms-1 segundaFlecha btn pt-1 pb-1"></i>
                 </div>
@@ -988,11 +988,334 @@
         </section>
       </div>
     </main>
-    <footer>
-      <div class="container mt-5">
-        <div class="row">
-        </div>
+    <footer class="container-fluid">
+      <section class="footer mt-5">
+        <div class="mt-5">
+          <div class="col-md-12 container mx-auto row">
+            <div class="col-md-7 mt-5 fw-bold">
+              <div class="d-flex flex-column">
+                <h3 href="#" class="text-decoration-none fs-1 mb-2 fw-bold">
+                  Probar gratis
+                </h3>
+                <a href="#" class="text-decoration-none">Precio</a>
+                <a href="#" class="text-decoration-none"
+                  >Comunicarse con Ventas</a
+                >
+                <a href="#" class="text-decoration-none">Ver demostraciones</a>
+                <button
+                  class="btn ps-4 pt-2 pb-2 pe-3 fw-bold w-25 mt-3 fs-5"
+                  id="btnAzul">
+                  Unirse
+                  <div
+                    class="ms-2 d-flex align-items-center d-inline-flex"
+                    id="divFlecha">
+                    <i class="bi bi-arrow-right primeraFlechaAzul"></i
+                    ><i
+                      class="bi bi-arrow-right ms-1 segundaFlecha btn pt-1 pb-1"></i>
+                  </div>
+                </button>
+              </div>
+            </div>
+            <div class="col-md-5 mt-5">
+              <h3 class="fw-bold mb-3">Atención al cliente 24x7</h3>
+              <p class="w-100 fs-5">
+                Nuestro equipo de asistencia al cliente está disponible las 24
+                horas, los 7 días de la semana. Los miembros de Enterprise
+                también tienen acceso a administradores de cuentas
+                especializados y a un ANS de tiempo de actividad garantizado.
+              </p>
+              <button
+                class="btn ps-4 pt-2 pb-2 pe-3 fw-bold w-75 mt-3 cambio"
+                id="btnFooter">
+                Contactar al equipo de asistencia
+                <div
+                  class="ms-2 d-flex align-items-center d-inline-flex"
+                  id="divFlecha">
+                  <i
+                    class="bi bi-arrow-right text-black fw-bold primeraFlechaAzul"></i
+                  ><i
+                    class="bi bi-arrow-right ms-1 text-white segundaFlecha btn pt-1 pb-1"></i>
+                </div>
+              </button>
+            </div>
+            <div class="col-md-2 mt-5 enlacesFooter">
+              <h3 class="fw-bold mb-5 fs-4">Producto</h3>
+              <div class="w-100">
+                <p class="fw-bold fs-5">Productos</p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Reproductor de video</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Alojamiento de videos</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Editor de videos</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Realizador de videos</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Grabar</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Transmisión en vivo</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Vimeo Venues</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Seminarios web</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Videoteca</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Vimeo AI</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Colaboración de video</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Estadísticas del video</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">OTT</a>
+                </p>
+              </div>
+            </div>
+            <div class="col-md-2 mt-5 enlacesFooter">
+              <h3 class="fw-bold mt-5 fs-4"></h3>
+              <div class="w-100 margenFooter">
+                <p class="fw-bold fs-5">Funciones</p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Aplicaciones móviles</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Teleprompter</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Transcripción de videos</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Leyendas automáticas</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Herramienta de recorte de videos</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Seguridad</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Creador de gif</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Convertir imagen a video</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Traducción de IA</a>
+                </p>
+              </div>
+            </div>
+            <div class="col-md-2 mt-5 enlacesFooter">
+              <h3 class="fw-bold mb-5 mt-5 fs-4"></h3>
+              <div class="w-100 margenFooter">
+                <p class="fw-bold fs-5">Vimeo para</p>
+                <p>
+                  <a href="" class="text-decoration-none">Empresas</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Pequeñas empresas</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Profesionales creativos</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Educadores</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Profesionales del marketing</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Comunicaciones corporativas</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Aprendizaje y desarrollo</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Salud</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Venta minorista</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Servicios financieros</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Tecnología</a>
+                </p>
+              </div>
+            </div>
+            <div class="col-md-2 mt-5 enlacesFooter">
+              <h3 class="fw-bold mb-5 mt-5 fs-4"></h3>
+              <div class="w-100 margenFooter">
+                <p class="fw-bold fs-5">Soluciones</p>
+                <p>
+                  <a href="" class="text-decoration-none">Vimeo Central</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Vimeo Marketing</a>
+                </p>
+              </div>
+            </div>
+            <div class="col-md-2 mt-5 enlacesFooter">
+              <h3 class="fw-bold mb-5 fs-4">Recursos</h3>
+              <div class="w-100">
+                <p>
+                  <a href="" class="text-decoration-none">Centro de ayuda</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Contactar al equipo de asistencia</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Historias de los clientes</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Eventos y seminarios web</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Blog</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Programadores</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Directrices</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Vimeo Experts</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Ver Kit multimedia</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Centro de integraciones</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="col-md-2 mt-5 enlacesFooter">
+              <h3 class="fw-bold mb-5 fs-4">Empresa</h3>
+              <div class="w-100">
+                <p>
+                  <a href="" class="text-decoration-none">Acerca de Vimeo</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Carreras</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Cultura</a>
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Relaciones con los inversores</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none"
+                    >Noticias sobre productos</a
+                  >
+                </p>
+                <p>
+                  <a href="" class="text-decoration-none">Mapas del sitio</a>
+                </p>
+              </div>
+            </div>
 
+            <div class="col-md-3 mt-5 enlacesFooter">
+              <div class="w-100 mt-1">
+                <div class="d-flex">
+                  <a href="" class="text-decoration-none">
+                    <i class="bi bi-instagram fs-5"></i>
+                  </a>
+                  <a href="" class="text-decoration-none">
+                    <i class="bi bi-twitter-x fs-5 ms-4"></i>
+                  </a>
+                  <a href="" class="text-decoration-none">
+                    <i class="bi bi-facebook fs-5 ms-4"></i>
+                  </a>
+                  <a href="" class="text-decoration-none">
+                    <i class="bi bi-linkedin fs-5 ms-4"></i>
+                  </a>
+                  <p class="ms-4 pt-1">
+                    <a href="" class="small">Idioma:</a>
+                  </p>
+
+                  <select class="ms-2" id="idioma">
+                    <option value="es">Español</option>
+                    <option value="en">English</option>
+                    <option value="fr">Français</option>
+                    <option value="de">Deutsch</option>
+                    <option value="it">Italiano</option>
+                    <option value="pt">Português</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-6 text-start" id="derechosReservados">
+                <p>© 2025 Vimeo.com, Inc. Todos los derechos reservados.</p>
+                <a href="" class="text-decoration-none">Condiciones |</a>
+                <a href="" class="text-decoration-none">Privacidad |</a>
+                <a href="" class="text-decoration-none"
+                  >Privacidad de los estados de EE. UU. |</a
+                >
+                <a href="" class="text-decoration-none"
+                  >Derechos de autor |</a
+                >
+                <a href="" class="text-decoration-none">Cookies</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </footer>
     <script type="module" src="./main.js"></script>
   </body>
