--- a/src/index.html
+++ b/src/index.html
@@ -626,7 +626,8 @@
                 videos impactantes que generen resultados.
               </p>
               <div class="animado">
-                <div class="mt-2 mb-5 btn ps-4 pt-2 pb-2 pe-3 fw-bold btnAzul">
+                <div
+                  class="mt-2 mb-5 btn ps-4 pt-2 pb-2 pe-3 fw-bold btnAzul text-black">
                   Solicitar una demostracion
                   <div
                     class="ms-2 d-flex align-items-start d-inline-flex divFlecha">
@@ -908,7 +909,7 @@
                 >
                 <a href="#" class="text-decoration-none">Ver demostraciones</a>
                 <div
-                  class="btn ps-4 pt-2 pb-2 pe-3 fw-bold w-25 mt-3 fs-5 btnAzul">
+                  class="btn ps-4 pt-2 pb-2 pe-3 fw-bold w-25 mt-3 fs-5 btnAzul text-black">
                   Unirse
                   <div
                     class="ms-2 d-flex align-items-center d-inline-flex divFlecha">
@@ -1224,7 +1225,7 @@
         const opciones = {
           root: null, // Observa respecto al viewport
           rootMargin: "0px",
-          threshold: 0.7, // El 10% del elemento visible
+          threshold: 0.6, // El 10% del elemento visible
         };
 
         const callback = (entradas, observador) => {
